[package]
name = "tetrix-telnet"
version = "0.1.0"
authors = ["Kevin Mooney <kmooney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"
log = "0.4.6"
simple_logger = "1.11.0"
tetrix = { path = "../tetrix" }
json = "0.12.4"
phf = { version = "0.8.0", features = ["macros"] }